--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react-datepicker": "^4.8.0",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "cypress": "^12.7.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
