--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "cra-template-typescript": "1.2.0",
-    "i": "^0.3.7",
     "moment": "^2.29.4",
     "npm": "^9.5.1",
     "react": "^18.2.0",
@@ -28,8 +27,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "cypress open"
   },
   "eslintConfig": {
     "extends": [
